--- a/javascript-method-filter-map-reduce/index.html
+++ b/javascript-method-filter-map-reduce/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li data-duration="15:27">Pomodoro technique</li>
       <li data-duration="11:18">JAVASCRIPT LANJUTAN | Higher Order Functions</li>
-      <li data-duration="21:40">JAVASCRIPT LANJUTAN | This pada Arrow Function</li>
+      <li data-duration="21:40">JAVASCRIPT LANJUTAN | This in Arrow Function</li>
       <li data-duration="19:38">Scam Website</li>
       <li data-duration="12:10">JAVASCRIPT LANJUTAN | Arrow Function</li>
       <li data-duration="20:43">JAVASCRIPT LANJUTAN | Closure</li>
